# nas-file-categorizer

./: LICENSE  README.md  pyproject.toml  run.py
src/: test_setup.py
src/analyzer/: face_detector.py  image_analyzer.py
src/integration/: file_processor.py
src/scanner/: __init__.py  file_scanner.py
src/web/: app.py
src/web/static/js/: gallery.js
src/web/templates/: gallery.html
tests/: conftest.py  helpers.py  test_file_processor.py  test_gallery_app.py  test_gallery_interface.py  test_image_analyzer.py  test_scanner.py
tests/test_data/folder2/subfolder/: document4.txt
tests/test_resources/: files.py  gallery.py  images.py
