[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-scanner"
version = "0.0.1"
description = "A tool for scanning and categorizing NAS files"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scanner", "analyzer", "integration", "web"]